--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -7,8 +7,8 @@
     <br/>
     <br/>
     <MudGrid>
-        <MudItem xs="3"></MudItem>
-        <MudItem xs="6">
+        <MudItem md="3" xs="1"></MudItem>
+        <MudItem md="6" xs="10">
             @if (State == ConfessionBoxState.ShowConfessionBox)
             {
                 <MudCard Elevation="0" Style="background-color: #000f">
@@ -39,6 +39,6 @@
                 <MudButton Variant="Variant.Filled" Color="Color.Secondary" OnClick="@RestartConfession">Recomeçar</MudButton>
             }
         </MudItem>
-        <MudItem xs="3"></MudItem>
+        <MudItem md="3" xs="1"></MudItem>
     </MudGrid>
 </center>
